# ollama-chatbot

./: .gitignore  COMPLETE_PROJECT_PROMPT.md  CONTRIBUTING.md  DOCS_INDEX.md  FILE_TREE.txt  GIT_PUSH_INSTRUCTIONS.md  GIT_PUSH_V3.md  LICENSE  NEXT_STEPS.txt  PLATFORM_DIFFERENCES.md  README.md  START_HERE.md  TESTING.md  V2_QUICK_START.md  V2_SUMMARY.md  V2_UPGRADE_GUIDE.md  YOUR_ACTION_PLAN.md  app_settings.pkl  chat_sessions.pkl  chatbot.py  chatbot_v2.py  chatbot_v3.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_all_tests.py  run_tests.sh  setup.bat  setup.sh  test_chatbot_v1.py  test_chatbot_v2.py  test_chatbot_v3.py
Documentation/: CROSS_PLATFORM.md  DOCUMENTATION.md  ORGANIZATION_SUMMARY.md  PRD.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_V2.md  README_V3.md  SETUP_GITHUB.md  TESTING.md  USER_PROMPTS_HISTORY.md  V2_GITHUB_PUSH.md  V3_FEATURES.md  V3_QUICKSTART.md  VERSION_COMPARISON.md
screenshots/: .gitkeep
