[project]
name = "ollama-chatbot"
version = "2.0.0"
description = "A professional chatbot application with file/image upload support, powered by Ollama"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ollama", "chatbot", "ai", "llm", "gui", "tkinter"]
authors = [
    {name = "volo10", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/volo10/ollama-chatbot"
Repository = "https://github.com/volo10/ollama-chatbot"
Issues = "https://github.com/volo10/ollama-chatbot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

